--- a/arbol_regresion.ipynb
+++ b/arbol_regresion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import ShuffleSplit\n",
     "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import plot_tree\n",
@@ -30,6 +31,8 @@
     "from sklearn.compose import make_column_selector as selector\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.model_selection import LearningCurveDisplay\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "plt.rcParams['figure.figsize'] = (15, 9)\n",
     "plt.style.use('ggplot')\n",
@@ -144,11 +147,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train = train['SalePrice']\n",
-    "y_test = test['SalePrice']\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    train.drop(columns=[\"SalePrice\"]), train[\"SalePrice\"],\n",
+    "    test_size=0.2, random_state=42\n",
+    ")\n",
+    "X_test = test.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ColumnTransformer(transformers=[('one-hot-encoder',\n",
+      "                                 OneHotEncoder(handle_unknown='ignore'),\n",
+      "                                 ['MSZoning', 'Street', 'Alley', 'LotShape',\n",
+      "                                  'LandContour', 'Utilities', 'LotConfig',\n",
+      "                                  'LandSlope', 'Neighborhood', 'Condition1',\n",
+      "                                  'Condition2', 'BldgType', 'HouseStyle',\n",
+      "                                  'RoofStyle', 'RoofMatl', 'Exterior1st',\n",
+      "                                  'Exterior2nd', 'MasVnrType', 'ExterQual',\n",
+      "                                  'ExterCond', 'Foundation', 'Bsm...\n",
+      "                                  'OverallQual', 'OverallCond', 'YearBuilt',\n",
+      "                                  'YearRemodAdd', 'MasVnrArea', 'BsmtFinSF1',\n",
+      "                                  'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF',\n",
+      "                                  '1stFlrSF', '2ndFlrSF', 'LowQualFinSF',\n",
+      "                                  'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath',\n",
+      "                                  'FullBath', 'HalfBath', 'BedroomAbvGr',\n",
+      "                                  'KitchenAbvGr', 'TotRmsAbvGrd', 'Fireplaces',\n",
+      "                                  'GarageYrBlt', 'GarageCars', 'GarageArea',\n",
+      "                                  'WoodDeckSF', 'OpenPorchSF', ...])])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aplicar one-hot encoding en ambas \n",
+    "categorical_columns_selector = selector(dtype_include=object)\n",
+    "numerical_columns_selector = selector(dtype_exclude=object)\n",
     "\n",
-    "X_train = train.drop(columns=['SalePrice'])\n",
-    "X_test = test.drop(columns=['SalePrice'])"
+    "numerical_columns = numerical_columns_selector(X_train)\n",
+    "categorical_columns = categorical_columns_selector(X_train)\n",
+    "\n",
+    "categorical_preprocessor = OneHotEncoder(handle_unknown=\"ignore\")\n",
+    "numerical_preprocessor = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy=\"mean\")),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    ('one-hot-encoder', categorical_preprocessor, categorical_columns),\n",
+    "    ('scaler', numerical_preprocessor, numerical_columns)\n",
+    "])\n",
+    "\n",
+    "print(preprocessor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'regressor__max_depth': 6}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pipeline con totadas las variables y diferentes parametros para la profundidad del árbol\n",
+    "param_grid = {\"max_depth\": np.arange(2, 10, 1)}\n",
+    "pipeline = Pipeline(\n",
+    "    [('preprocessor',preprocessor),\n",
+    "     ('regressor',DecisionTreeRegressor())])\n",
+    "params = [{\n",
+    "    \"regressor__max_depth\": np.arange(2, 10, 1)\n",
+    "}]\n",
+    "modelo1 = GridSearchCV(pipeline, param_grid=params, n_jobs=2, cv=5,scoring=\"neg_root_mean_squared_error\") # evaluamos usando CV para ver cuál es el mejor modelo de todos \n",
+    "modelo1.fit(X_train,y_train)\n",
+    "modelo1.best_params_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 31993.5061\n",
+      "MSE: 2429868939.7797\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predicción y cálculo de errores\n",
+    "y_pred_valid = modelo1.predict(X_valid)\n",
+    "mae = mean_absolute_error(y_valid, y_pred_valid)\n",
+    "mse = mean_squared_error(y_valid, y_pred_valid)\n",
+    "\n",
+    "print(f\"MAE: {mae:.4f}\")\n",
+    "print(f\"MSE: {mse:.4f}\")"
    ]
   }
  ],
