--- a/clasification_tree.ipynb
+++ b/clasification_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -213,17 +213,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
     "\n",
-    "# Cargar los archivos\n",
-    "train_df = pd.read_csv(\"./train.csv\")\n",
-    "test_df = pd.read_csv(\"./test.csv\")\n",
+    "df_train = pd.read_csv(\"./train.csv\")\n",
+    "df_test = pd.read_csv(\"./test.csv\")\n",
     "\n",
-    "# Mostrar las primeras filas del conjunto de entrenamiento\n",
-    "train_df.head()\n"
+    "df_train.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,25 +244,24 @@
     }
    ],
    "source": [
-    "# Graficar la distribución de los precios de las casas\n",
     "plt.figure(figsize=(10, 5))\n",
-    "sns.histplot(train_df['SalePrice'], bins=30, kde=True)\n",
-    "plt.title(\"Distribución de precios de las casas\")\n",
-    "plt.xlabel(\"Precio de venta\")\n",
+    "sns.histplot(df_train['SalePrice'], bins=30, kde=True)\n",
+    "plt.title(\"¿Cómo están los precios de las casas?\")\n",
+    "plt.xlabel(\"Precio\")\n",
     "plt.ylabel(\"Frecuencia\")\n",
     "plt.show()\n",
     "\n",
-    "# Calcular los percentiles para definir las categorías de precios\n",
-    "q1 = train_df['SalePrice'].quantile(0.33)\n",
-    "q2 = train_df['SalePrice'].quantile(0.66)\n",
+    "low_price = df_train['SalePrice'].quantile(0.33)\n",
+    "mid_price = df_train['SalePrice'].quantile(0.66)\n",
     "\n",
-    "print(f\"Límite Económicas: {q1}\")\n",
-    "print(f\"Límite Intermedias: {q2}\")\n"
+    "print(f\"Casas económicas: hasta {low_price}\")\n",
+    "print(f\"Casas intermedias: entre {low_price} y {mid_price}\")\n",
+    "print(f\"Casas caras: más de {mid_price}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -293,33 +290,29 @@
     }
    ],
    "source": [
-    "# Función para categorizar las casas según su precio\n",
-    "def categorizar_precio(precio):\n",
-    "    if precio <= q1:\n",
-    "        return \"Económica\"\n",
-    "    elif precio <= q2:\n",
-    "        return \"Intermedia\"\n",
+    "def categorizar_casas(precio):\n",
+    "    if precio <= low_price:\n",
+    "        return \"Barata\"\n",
+    "    elif precio <= mid_price:\n",
+    "        return \"Normal\"\n",
     "    else:\n",
     "        return \"Cara\"\n",
     "\n",
-    "# Aplicar la función al dataset de entrenamiento\n",
-    "train_df['CategoriaPrecio'] = train_df['SalePrice'].apply(categorizar_precio)\n",
+    "df_train['Categoria'] = df_train['SalePrice'].apply(categorizar_casas)\n",
     "\n",
-    "# Mostrar la distribución de las categorías\n",
     "plt.figure(figsize=(7, 5))\n",
-    "sns.countplot(x=train_df['CategoriaPrecio'], order=[\"Económica\", \"Intermedia\", \"Cara\"])\n",
-    "plt.title(\"Distribución de categorías de precios\")\n",
-    "plt.xlabel(\"Categoría\")\n",
-    "plt.ylabel(\"Cantidad de casas\")\n",
+    "sns.countplot(x=df_train['Categoria'], order=[\"Barata\", \"Normal\", \"Cara\"])\n",
+    "plt.title(\"Cantidad de casas en cada categoría\")\n",
+    "plt.xlabel(\"Tipo de casa\")\n",
+    "plt.ylabel(\"Número de casas\")\n",
     "plt.show()\n",
     "\n",
-    "# Verificar la cantidad de casas en cada categoría\n",
-    "train_df['CategoriaPrecio'].value_counts()\n"
+    "df_train['Categoria'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -332,26 +325,23 @@
     }
    ],
    "source": [
-    "# Seleccionar características para entrenar el modelo (excluyendo SalePrice)\n",
-    "features = [\"OverallQual\", \"GrLivArea\", \"GarageCars\", \"TotalBsmtSF\", \"FullBath\", \"YearBuilt\", \"LotArea\"]\n",
+    "columnas_utiles = [\"OverallQual\", \"GrLivArea\", \"GarageCars\", \"TotalBsmtSF\", \"FullBath\", \"YearBuilt\", \"LotArea\"]\n",
     "\n",
-    "X = train_df[features]\n",
-    "y = train_df[\"CategoriaPrecio\"]\n",
+    "X = df_train[columnas_utiles]\n",
+    "y = df_train[\"Categoria\"]\n",
     "\n",
-    "# Convertir variables categóricas en numéricas si es necesario\n",
+    "# Categorica a numerica\n",
     "X = pd.get_dummies(X)\n",
     "\n",
-    "# Dividir el dataset en entrenamiento y prueba\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Mostrar el tamaño de los conjuntos\n",
-    "print(f\"Tamaño de entrenamiento: {X_train.shape}\")\n",
-    "print(f\"Tamaño de prueba: {X_test.shape}\")\n"
+    "print(f\"Tamaño del set de entrenamiento: {X_train.shape}\")\n",
+    "print(f\"Tamaño del set de prueba: {X_test.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,21 +354,19 @@
     }
    ],
    "source": [
-    "# Crear y entrenar el modelo de árbol de decisión\n",
-    "tree_model = DecisionTreeClassifier(max_depth=4, random_state=42)\n",
-    "tree_model.fit(X_train, y_train)\n",
+    "modelo = DecisionTreeClassifier(max_depth=4, random_state=42)\n",
+    "modelo.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluar el modelo\n",
-    "train_score = tree_model.score(X_train, y_train)\n",
-    "test_score = tree_model.score(X_test, y_test)\n",
+    "score_train = modelo.score(X_train, y_train)\n",
+    "score_test = modelo.score(X_test, y_test)\n",
     "\n",
-    "print(f\"Precisión en entrenamiento: {train_score:.2f}\")\n",
-    "print(f\"Precisión en prueba: {test_score:.2f}\")\n"
+    "print(f\"Precisión en entrenamiento: {score_train:.2f}\")\n",
+    "print(f\"Precisión en prueba: {score_test:.2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -393,9 +381,8 @@
     }
    ],
    "source": [
-    "# Visualizar el árbol de decisión\n",
     "plt.figure(figsize=(15, 10))\n",
-    "plot_tree(tree_model, feature_names=X.columns, class_names=[\"Económica\", \"Intermedia\", \"Cara\"], filled=True, rounded=True)\n",
+    "plot_tree(modelo, feature_names=X.columns, class_names=[\"Barata\", \"Normal\", \"Cara\"], filled=True, rounded=True)\n",
     "plt.show()\n"
    ]
   }
