feat: graph analysis

--- a/clasification_tree.ipynb
+++ b/clasification_tree.ipynb
@@ -264,6 +264,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para definir si una casa es barata, normal o cara, se utilizó la **media y la desviación estándar** porque permiten capturar la tendencia central de los precios y su variabilidad. La media representa el precio promedio de las casas, mientras que la desviación estándar indica cuánto varían los precios respecto a ese promedio. Al clasificar las casas usando **(media - desviación estándar)** para económicas y **(media + desviación estándar)** para caras, se obtiene una separación basada en la dispersión natural de los datos, asegurando que las categorías reflejen diferencias significativas en el mercado."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -312,6 +319,13 @@
     "plt.show()\n",
     "\n",
     "df_train['Categoria'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los resultados muestran que la mayoría de las casas (1145) fueron clasificadas como **normales**, mientras que hay pocas **baratas** (124) y **caras** (191). Esto significa que, con este método, la mayoría de los precios caen en la categoría intermedia, dejando pocas casas en los extremos. Puede ser que los valores de las casas no varíen tanto o que esta forma de clasificarlas no sea la mejor para repartirlas de manera más pareja. Si se quiere una distribución más equilibrada, quizás sería mejor usar otro criterio, como los percentiles."
    ]
   },
   {
